# arkiweb

./: .copr.enc  .coveragerc  .gitignore  .travis-build.sh  .travis.yml  AUTHORS  ChangeLog  Makefile  Makefile.am  NEWS  README  README.it.md  README.md  TODO  arkiweb.spec  configure.ac  manage.py  pyproject.toml  setup.cfg  simpleauth.lua
arkiweb/: Makefile.am  authorization.cc  authorization.h  cgi.cc  cgi.h  configfile-tut.cc  configfile.cc  configfile.h  data.cc  data.h  dataset.cc  dataset.h  datasets.cc  datasets.h  emitter.cc  emitter.h  encoding.cc  encoding.h  fields.cc  fields.h  metadata.cc  metadata.h  processor-tut.cc  processor.cc  processor.h  restrict.cc  restrict.h  summary.cc  summary.h  utils.cc  utils.h
arkiweb/arkimet/: admin.py  apps.py  arkimet.py  consts.py  models.py  urls.py  views.py
arkiweb/arkimet/migrations/: 0001_initial.py
arkiweb/arkimet/tests/: test_apiview.py  test_arkimet.py  test_data.py  test_datasets.py  test_fields.py  test_summary.py  utils.py
arkiweb/project/: asgi.py  settings.py  urls.py  wsgi.py
arkiweb/ui/: apps.py  urls.py  views.py
arkiweb/ui/static/: Makefile.am
arkiweb/ui/static/arkiweb/collections/: datasets.js
arkiweb/ui/static/arkiweb/postprocessors/: seriet.js
arkiweb/ui/static/arkiweb/templates/: application.eco  datasets-selection-item.js  fields-selection.js  summary.eco
arkiweb/ui/static/ui/: Makefile  arkiweb.css  arkiweb.js
arkiweb/ui/static/ui/arkiweb/models/: dataset.js  field.js
arkiweb/ui/static/ui/arkiweb/postprocessors/: json.js
arkiweb/ui/static/ui/arkiweb/templates/: datasets-selection.eco  datasets-selection.js  fields-selection-reftime.eco  summary-item.js  summary.js
arkiweb/ui/static/ui/arkiweb/views/: fields-selection.js  map.js
arkiweb/ui/static/ui/test/fixtures/: datasets
arkiweb/ui/templates/ui/: index.html
arkiweb/wobble/: string.cc  string.h  sys.cc  sys.h  tests-main.cc  tests.cc  tests.h
cgi-bin/: Makefile.am  data.cc  datasets.cc  fields.cc  summary.cc
debian/: changelog  control  copyright
embedded/cgicc/: AUTHORS  ChangeLog  Makefile.am  README  configure.ac
embedded/cgicc/cgicc/: Makefile.am  config.h
fedora/SPECS/: arkiweb.spec
httpd/: Makefile.am  arkiweb.conf.in  arkiweb.site
javascript/: Makefile.am  arkiweb.css  arkiweb.html  arkiweb.js  index.html  jquery.arkiweb.js
public/: Makefile.am  arkiweb-parser.js  arkiweb.css  arkiweb.html  arkiweb.js  arkiweb.min.js  index.html  jquery.arkiweb.js  require.js
public/arkiweb/: config.js  config.js.in  parser.js
public/arkiweb/collections/: datasets.js  fields.js
public/arkiweb/postprocessors/: gacsv.js  json.js  singlepoint.js  subarea.js
public/arkiweb/templates/: application.eco  application.js  datasets-selection-item.eco  fields-selection-item.js  fields-selection-reftime.js  fields-selection.eco  postprocessor.eco  postprocessor.js  summary-item.eco
public/arkiweb/views/: application.js  datasets-selection.js  map.js  postprocessors.js  summary.js
public/collections/: datasets.js  fields.js
public/css/: arkiweb.less
public/docs/: arkiweb.html
public/fixtures/: datasets  fields
public/javascript/: arkiweb.js  jquery.arkiweb.js  parser.js
public/javascript/collections/: field-values.js  fields.js
public/javascript/models/: field-value.js  field.js
public/javascript/routers/: router.js
public/javascript/templates/: dataset-description.eco  datasets-selection-item.eco  fields-selection-section-item.eco  fields-selection-section.eco  fields-selection-stats-section.eco  main.eco  postprocessor.eco  summary-section-item.eco  summary-section.eco  summary-stats.eco  summary.eco
public/javascript/views/: datasets-selection-item.js  datasets-selection.js  error.js  fields-selection-section-item.js  fields-selection-section.js  fields-selection-stats-section.js  fields-selection.js  main.js  map.js  postprocessor.js  postprocessors.js  summary-section-item.js  summary-section.js  summary-stats.js  summary.js
public/javascript/views/postprocessors/: singlepoint.js  subarea.js
public/models/: dataset.js
public/routers/: router.js
public/stylesheets/: arkiweb.css
public/views/: abstract-postprocessor.js  datasets-selection.js  fields-selection-section-item.js  fields-selection-section.js  postprocessor.js  summary.js
public/views/postprocessors/: subarea.js
src/: Makefile.am  arkiweb-dataset-list.cc  arkiweb-download.cc  arkiweb-extended-summary.cc  arkiweb-summary.cc  data.cc  datasets.cc  extended-summary.cc  fields.cc  metadata.cc  summary.cc
testdata/: cosmo_t2m_2021_1_10_0_0_0+12.arkimet
testdata/data/: ifs_t2m_2021_1_10_0_0_0+12.arkimet
testdata/datasets/: Makefile
testdata/datasets/cosmo/: config
testdata/datasets/ifs/: config
website/: Makefile.am  arkiweb-config.js  arkiweb-parser.js  arkiweb.css  arkiweb.js  index.html  jquery-ui-timepicker-addon.css
website/css/: arkiweb.css
website/js/: arkiweb-conf.js  arkiweb-parser.js  arkiweb.js
