[metadata]
maintainer = ARPAE-SIMC
maintainer_email = urpsim@arpae.it
name = arkiweb
version = attr: arkiweb.__version__
url = https://github.com/ARPA-SIMC/arkiweb-TODO
license = GPL-2+
license_files = LICENSE
description = Web interface for arkimet datasets
long_description = file: README.md
classifiers =
    Framework :: Django
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Operating System :: POSIX :: Linux
    Topic :: Software Development

[options]
packages = arkiweb

[mypy]
# https://mypy.readthedocs.io/en/latest/config_file.html

[flake8]
max-line-length = 120

[pycodestyle]
max-line-length = 120
