## $Id: Makefile.am,v 1.26 2008/06/01 18:40:27 sebdiaz Exp $

CLEANFILES = *~

INCLUDES = -I$(top_srcdir)

noinst_LTLIBRARIES = libcgicc.la

libcgicc_la_SOURCES = \
		      Cgicc.cpp \
		      Cgicc.h \
		      CgiDefs.h \
		      CgiEnvironment.cpp \
		      CgiEnvironment.h \
		      CgiInput.cpp \
		      CgiInput.h \
		      CgiUtils.cpp \
		      CgiUtils.h \
		      config.h \
		      FormEntry.cpp \
		      FormEntry.h \
		      FormFile.cpp \
		      FormFile.h \
		      HTMLAtomicElement.h \
		      HTMLAttribute.cpp \
		      HTMLAttribute.h \
		      HTMLAttributeList.cpp \
		      HTMLAttributeList.h \
		      HTMLBooleanElement.h \
		      HTMLClasses.h \
		      HTMLDoctype.cpp \
		      HTMLDoctype.h \
		      HTMLElement.cpp \
		      HTMLElement.h \
		      HTMLElementList.cpp \
		      HTMLElementList.h \
		      HTTPContentHeader.cpp \
		      HTTPContentHeader.h \
		      HTTPCookie.cpp \
		      HTTPCookie.h \
		      HTTPHeader.cpp \
		      HTTPHeader.h \
		      HTTPHTMLHeader.cpp \
		      HTTPHTMLHeader.h \
		      HTTPPlainHeader.cpp \
		      HTTPPlainHeader.h \
		      HTTPRedirectHeader.cpp \
		      HTTPRedirectHeader.h \
		      HTTPResponseHeader.cpp \
		      HTTPResponseHeader.h \
		      HTTPStatusHeader.cpp \
		      HTTPStatusHeader.h \
		      HTTPXHTMLHeader.cpp \
		      HTTPXHTMLHeader.h \
		      MStreamable.cpp \
		      MStreamable.h \
		      XHTMLDoctype.cpp \
		      XHTMLDoctype.h \
		      XMLDeclaration.h \
		      XMLPI.cpp \
		      XMLPI.h
